# AI_Fellow_GF

./: .env.example  .gitignore  AI_USAGE.md  Dockerfile  README.md  pyproject.toml  requirements-audio.txt  requirements.txt
common/: llm.py
deployment/: README-hf-space.md  README.md
docs/: index.html
docs/results/: audio_report.json  headtohead.json  report.html  results.json
endpoint/: __init__.py  app.py  build_index.py  llm.py  rag.py
endpoint/corpus/: india_uip.md  mohfw_anemia.md  who_anc.md  who_breastfeeding.md  who_complementary_feeding.md  who_danger_signs.md
endpoint/index/: chunks.json  faiss.index  meta.json
eval/: __init__.py  audio.py  cases.py  cases.yaml  client.py  report.py  runner.py
eval/metrics/: __init__.py  bias.py  factuality.py  refusal.py  safety_aware.py
issues/: README.md  bias-detection.md  executor-response-shape.md  refusal-as-error.md  report-create-report-signature.md  strategy-auto-silent-zero.md  strategy-env-mount.md  three-fragility-bugs.md  webapp-openweb-ui-broken.md  whatsapp-web-scraper-broken.md
issues/patches/: whatsapp-web-fix.patch
scripts/: gen_audio.py  headtohead.py  sanity_check.py  score_audio.py
